--- a/task4/index.html
+++ b/task4/index.html
@@ -1,60 +1,61 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <title>Simple Calculator</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
-<head>
-    <title>Calculator App</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-
-<body>
+  <body>
     <center>
+      <div class="heading">Simple Calculator</div>
 
-        <div class="heading">
-            Simple Calculator
+      <div class="calculator">
+        <input type="text" id="result" readonly />
+        <!-- keypad start -->
+        <div class="keypad">
+          <table>
+            <tr class="row">
+              <td><button id="c" onclick="clearResult()">C</button></td>
+              <td><button onclick="deleteLastDigit()">&larr;</button></td>
+              <td><button onclick="appendValue('/')">/</button></td>
+              <td><button onclick="appendValue('*')">x</button></td>
+            </tr>
+
+            <tr class="row">
+              <td><button onclick="appendValue('7')">7</button></td>
+              <td><button onclick="appendValue('8')">8</button></td>
+              <td><button onclick="appendValue('9')">9</button></td>
+              <td><button onclick="appendValue('-')">-</button></td>
+            </tr>
+
+            <tr class="row">
+              <td><button onclick="appendValue('4')">4</button></td>
+              <td><button onclick="appendValue('5')">5</button></td>
+              <td><button onclick="appendValue('6')">6</button></td>
+              <td><button onclick="appendValue('+')">+</button></td>
+            </tr>
+
+            <tr class="row">
+              <td><button onclick="appendValue('1')">1</button></td>
+              <td><button onclick="appendValue('2')">2</button></td>
+              <td><button onclick="appendValue('3')">3</button></td>
+              <td rowspan="2">
+                <button id="equal" onclick="calculateResult()">=</button>
+              </td>
+            </tr>
+
+            <tr class="row">
+              <td><button onclick="changeSign('-')">+/-</button></td>
+              <td><button onclick="appendValue('0')">0</button></td>
+              <td><button onclick="appendValue('.')">.</button></td>
+            </tr>
+          </table>
         </div>
-
-        <div class="calculator">
-            <input type="text" id="result" readonly>
-            <div class="keypad">
-
-                <div class="row">
-
-                    <button id="c" onclick="clearResult()">C</button>
-                    <button onclick="deleteLastDigit()">&larr;</button>
-                    <button onclick="appendValue('/')">/</button>
-                    <button onclick="appendValue('*')">x</button>
-                </div>
-                <div class="row">
-                    <button onclick="appendValue('7')">7</button>
-                    <button onclick="appendValue('8')">8</button>
-                    <button onclick="appendValue('9')">9</button>
-                    <button onclick="appendValue('-')">-</button>
-
-                </div>
-                <div class="row">
-                    <button onclick="appendValue('4')">4</button>
-                    <button onclick="appendValue('5')">5</button>
-                    <button onclick="appendValue('6')">6</button>
-                    <button onclick="appendValue('+')">+</button>
-
-                </div>
-                <div class="row">
-                    <button onclick="appendValue('1')">1</button>
-                    <button onclick="appendValue('2')">2</button>
-                    <button onclick="appendValue('3')">3</button>
-                    <button id="equal" onclick="calculateResult()">=</button>
-                </div>
-                <div class="row">
-                    <button onclick="changeSign('-')">+/-</button>
-                    <button onclick="appendValue('0')">0</button>
-                    <button onclick="appendValue('.')">.</button>
-                </div>
-            </div>
-        </div>
-        <br><br><br>
-        <footer>x--x-- by Abhay Chavan --x--x</footer>
-        <script src="index.js"></script>
+        <!-- keypad end -->
+      </div>
+      <br /><br /><br />
+      <footer>x--x-- by Abhay Chavan --x--x</footer>
+      <script src="index.js"></script>
     </center>
-</body>
-
+  </body>
 </html>
